--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,7 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+
 
 @keyframes logo-spin {
   from {
@@ -43,6 +32,16 @@
 
 .wallet-button {
   color: aquamarine;
+}
+
+.app {
+  padding: 20px 40px;
+}
+
+.app-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .app-title {
